# sherlog

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: rust.yml
benches/: core.rs
src/: app.rs  lib.rs  main.rs  sherlog_core.rs  sherlog_tui_app.rs  test_data.rs
src/app/: mod.rs
src/app/components/: filters.rs  mod.rs  status_line.rs  text_area.rs
src/sherlog_tui_app/: app.rs  filter_list.rs  mod.rs  status_line.rs
src/sherlog_tui_app/components/: mod.rs  text_area.rs
src/tui_widgets/: list.rs  mod.rs  overlay_block.rs  status_line.rs
src/ty/: filter.rs  mod.rs  span.rs  text.rs
