[package]
name = "sherlog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.26"
regex = "1.7"
tui = "0.19"
log = "0.4"
log4rs = "1.2"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.4"

[lib]
bench = false

[[bench]]
name = "core"
harness = false